# hello

./: CMakeLists.txt
include/: hello.h
src/: hello.c  main.c
